<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_school"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.home.erwin.homework.Activity.EditSchoolActivity">

    <TextView
        android:text="@string/name_school"
        android:textSize="@dimen/usual_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/schoolName" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/schoolDay"
        android:layout_alignParentStart="true"
        android:id="@+id/schoolDaySp"
        android:layout_alignEnd="@+id/schoolNameEt" />

    <TextView
        android:text="@string/color_school"
        android:textSize="@dimen/usual_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/schoolDaySp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:id="@+id/schoolColor" />

    <Button
        android:text="Pick a Color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/schoolColor"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:padding="4dp"
        android:id="@+id/colorPickerBt" />

    <TextView
        android:text="@string/day_school"
        android:textSize="@dimen/usual_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/schoolDay"
        android:layout_below="@+id/schoolNameEt"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:textSize="@dimen/usual_input_size"
        android:padding="2dp"
        android:id="@+id/schoolNameEt"
        android:background="@drawable/edittextborder"
        android:layout_below="@+id/schoolName"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:id="@+id/cancelBt"
            android:background="@color/colorPrimary"
            android:textSize="@dimen/usual_button_text_size"
            android:textColor="#FFF"
            android:layout_weight="1"/>

        <Button
            android:text="Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/saveBt"
            android:background="@color/colorPrimary"
            android:textSize="@dimen/usual_button_text_size"
            android:textColor="#FFF"
            android:layout_weight="1" />
    </LinearLayout>
</RelativeLayout>
