<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_entry_aktivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.home.erwin.homework.Activity.EditEntryActivity">

    <TextView
        android:text="@string/title_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/usual_text_size" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:textSize="@dimen/usual_input_size"
        android:padding="2dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:background="@drawable/edittextborder"
        android:id="@+id/titleTv"/>


    <TextView
        android:text="@string/desc_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTv"
        android:layout_marginTop="18dp"
        android:id="@+id/textView2"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/usual_text_size" />

    <TextView
        android:text="@string/date_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionTv"
        android:layout_marginTop="18dp"
        android:id="@+id/textView3"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/usual_text_size" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="5"
        android:textSize="@dimen/usual_input_size"
        android:padding="2dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:id="@+id/dateTv"
        android:background="@drawable/edittextborder"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:id="@+id/cancelBt"
            android:background="@color/colorPrimary"
            android:textSize="@dimen/usual_button_text_size"
            android:textColor="#FFF"
            android:layout_weight="1"/>

        <Button
            android:text="Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/saveBt"
            android:background="@color/colorPrimary"
            android:textSize="@dimen/usual_button_text_size"
            android:textColor="#FFF"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:textSize="@dimen/usual_input_size"
        android:padding="2dp"
        android:id="@+id/descriptionTv"
        android:background="@drawable/edittextborder"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

</RelativeLayout>
